# picodata-ingest-bench

./: .gitignore  README.md  pyproject.toml
picodata_ingest_bench/: Dockerfile  __init__.py  cli.py  config.py  container.py  harness.py  picodata.py  planner.py  profiling.py  results.py  runner.py  runtime.py  workloads.py
picodata_ingest_bench/methods/: __init__.py  common.py  copy.py  insert.py
tests/: test_unit.py
